anecdotes2 and margin2

--- a/index.html
+++ b/index.html
@@ -138,9 +138,7 @@
                 <li>Try me</li>
                 <li>It's Alright</li>
                 <li>No Sympathy</li>
-                <li>My Cup</li>
-                <li></li>
-                <li>blank</li>
+                <li>Iron Lion Zion</li>
               </ul>
             </div>
             <div>
@@ -151,7 +149,6 @@
                 <li>400 Years</li>
                 <li>No Water</li>
                 <li>Reaction</li>
-                <li></li>
               </ul>
             </div>
           </div>
